# cer_django

./: .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
blog/: admin.py  models.py  sitemaps.py  urls.py  views.py
blog/management/commands/: parse_blogs.py
blog/migrations/: 0001_initial.py
blog/services/: bmg_parser.py  currency_service.py
blog/templates/pages/: detail.html  index.html
blog/templates/partials/: burger_menu.html  currencies.html
pages/: urls.py  views.py
pages/static/css/: styles.css
pages/static/js/: app.js
pages/templates/: base.html
pages/templates/pages/: about.html  blog.html  home.html  products.html  services.html
pages/templates/partials/: footer.html  header.html  reasons.html  swiper.html
templates/: robots.txt
